--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="video">
-        <iframe title="vimeo-player" src="https://player.vimeo.com/video/995163658?h=1a445a2571" width="600" height="320" frameborder="0"    allowfullscreen></iframe>
+        <iframe title="vimeo-player" src="https://player.vimeo.com/video/995163658?h=1a445a2571" max-width="600" max-height="320" frameborder="0"    allowfullscreen></iframe>
     </div>
 </body>
 </html>
