--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 </div>
         </nav>
     </header>
-
+    <setion class="container_foto">
+        <div class="foto"></div>
+    </section>
     <div class="video">
         <iframe title="vimeo-player" src="https://player.vimeo.com/video/995163658?h=1a445a2571" width="600" height="320" frameborder="0"    allowfullscreen></iframe>
     </div>
