--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <div class="esquerda">
-                <p id="nome">NAKAO</p>
+                <p id="nome">Nakao</p>
             </div>
                 <div class="direita">
                 <a href="sobre.html" id="roxo">sobre</a>
@@ -21,9 +21,8 @@
                 </div>
         </nav>
     </header>
-    <setion class="container_foto">
         <div class="foto"></div>
-    </section>
+        <p>Ouça em:</p>
     <div class="video">
         <iframe title="vimeo-player" src="https://player.vimeo.com/video/995163658?h=1a445a2571" width="600" height="320" frameborder="0"    allowfullscreen></iframe>
     </div>
