--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="estilos/style.css">
 
+
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav>
             <div class="esquerda">
                 <p id="nome">Nakao</p>
@@ -21,10 +22,34 @@
                 </div>
         </nav>
     </header>
-        <div class="foto"></div>
-        <p>Ouça em:</p>
-    <div class="video">
-        <iframe title="vimeo-player" src="https://player.vimeo.com/video/995163658?h=1a445a2571" width="600" height="320" frameborder="0"    allowfullscreen></iframe>
-    </div>
+    <section class="pag1">
+        <div class="foto1"></div>
+    </section>
+    <section class="pag2">
+            <h1>Ouça em:</h1>
+            <div class="oucaem">
+                <abbr title="Spotify"><a href="https://open.spotify.com/intl-pt/artist/4TDT2YloHIkNFb9zbFgCTL?si=XBIpN_FORt2lv81pGY5MDw" target="_blank"><i class="spotify"></i></a></abbr>
+                <abbr title="Deezer"><a href="https://deezer.page.link/KMWpdrmt6qt3b32g6" target="_blank"><i class="deezer"></i></a></abbr>
+                <abbr title="YouTube"><a href="https://youtube.com/@nakaojoao?si=3KG9_hHTnxHVK-EX" target="_blank"><i class="youtube"></i></a></abbr>
+                <abbr title="Apple Music"><a href="https://music.apple.com/us/artist/nakao/1327712908" target="_blank"><i class="applemusic"></i></a></abbr>
+                <abbr title="Amazon Music"><a href="https://music.amazon.com.br/artists/B078HRN5FJ/nakao?marketplaceId=ART4WZ8MWBX2Y&musicTerritory=BR&ref=dm_sh_pMt1THc0AXaXL2KmG1rnPNo66" target="_blank"><i class="amazonmusic"></i></a></abbr>
+                <abbr title="Tidal"><a href="https://tidal.com/browse/artist/16720752" target="_blank"><i class="tidal"></i></a></abbr>
+            </div>
+            <div class="video">
+                <iframe title="vimeo-player" src="https://player.vimeo.com/video/995163658?h=1a445a2571" width="600" height="320" frameborder="0"    allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="foto2">
+            <blockquote>
+                "Como é bom cantar.  <br>
+                Trocar toques sons que ecoam no <span class="sol">Sol</span>."
+            </blockquote>
+        </div>
+    </section>
+
+
+    <script src="menu.js"></script>
 </body>
 </html>
