--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
     <section>
         <div class="foto2">
             <blockquote>
-                "Como é bom cantar.  <br>
-                Trocar toques sons que ecoam no <span class="sol">Sol</span>."
+                <p class="citacao">"Como é bom cantar. <br></p>
+                <p class="citacao">Trocar toques sons <br></p> 
+                <p class="citacao">que ecoam no <span class="sol">Sol</span>."
+                </p>
             </blockquote>
         </div>
     </section>
