--- a/index.html
+++ b/index.html
@@ -15,43 +15,64 @@
                 <p id="nome">Nakao</p>
             </div>
                 <div class="direita">
-                <a href="sobre.html" id="roxo">sobre</a>
-                        <a href="" id="vermelho">música</a>
-                <a href="" id="azul">galeria</a>
-                <a href="" id="amarelo">contato</a>
+                <a href="" id="musica">música</a>
+                <a href="sobre.html" id="sobre">sobre</a>
+                <a href="" id="contato">contato</a>
                 </div>
         </nav>
     </header>
-    <section class="pag1">
-        <div class="foto1"></div>
-    </section>
-    <section class="pag2">
-            <h1>Ouça em:</h1>
-            <div class="oucaem">
-                <abbr title="Spotify"><a href="https://open.spotify.com/intl-pt/artist/4TDT2YloHIkNFb9zbFgCTL?si=XBIpN_FORt2lv81pGY5MDw" target="_blank"><i class="spotify"></i></a></abbr>
-                <abbr title="Deezer"><a href="https://deezer.page.link/KMWpdrmt6qt3b32g6" target="_blank"><i class="deezer"></i></a></abbr>
-                <abbr title="YouTube"><a href="https://youtube.com/@nakaojoao?si=3KG9_hHTnxHVK-EX" target="_blank"><i class="youtube"></i></a></abbr>
-                <abbr title="Apple Music"><a href="https://music.apple.com/us/artist/nakao/1327712908" target="_blank"><i class="applemusic"></i></a></abbr>
-                <abbr title="Amazon Music"><a href="https://music.amazon.com.br/artists/B078HRN5FJ/nakao?marketplaceId=ART4WZ8MWBX2Y&musicTerritory=BR&ref=dm_sh_pMt1THc0AXaXL2KmG1rnPNo66" target="_blank"><i class="amazonmusic"></i></a></abbr>
-                <abbr title="Tidal"><a href="https://tidal.com/browse/artist/16720752" target="_blank"><i class="tidal"></i></a></abbr>
+    <main>
+        <section class="section_inicio">
+            <div class="foto1"></div>
+        </section>
+        <section class="section_oucaem">
+                <h1>Ouça em:</h1>
+                <div class="oucaem">
+                    <abbr title="Spotify"><a href="https://open.spotify.com/intl-pt/artist/4TDT2YloHIkNFb9zbFgCTL?si=XBIpN_FORt2lv81pGY5MDw" target="_blank"><i class="spotify"></i></a></abbr>
+                    <abbr title="Deezer"><a href="https://deezer.page.link/KMWpdrmt6qt3b32g6" target="_blank"><i class="deezer"></i></a></abbr>
+                    <abbr title="YouTube"><a href="https://youtube.com/@nakaojoao?si=3KG9_hHTnxHVK-EX" target="_blank"><i class="youtube"></i></a></abbr>
+                    <abbr title="Apple Music"><a href="https://music.apple.com/us/artist/nakao/1327712908" target="_blank"><i class="applemusic"></i></a></abbr>
+                    <abbr title="Amazon Music"><a href="https://music.amazon.com.br/artists/B078HRN5FJ/nakao?marketplaceId=ART4WZ8MWBX2Y&musicTerritory=BR&ref=dm_sh_pMt1THc0AXaXL2KmG1rnPNo66" target="_blank"><i class="amazonmusic"></i></a></abbr>
+                    <abbr title="Tidal"><a href="https://tidal.com/browse/artist/16720752" target="_blank"><i class="tidal"></i></a></abbr>
+                </div>
+                <div class="video">
+                    <iframe title="vimeo-player" src="https://player.vimeo.com/video/995163658?h=1a445a2571" width="600" height="320" frameborder="0"    allowfullscreen></iframe>
+                </div>
+                <h1>Redes Sociais</h1>
+                <div class="redessociais">
+                    <abbr title="Instagram"><a href="https://www.instagram.com/joao_nakao/" target="_blank"><i class="instagram"></i></a></abbr>
+                    <abbr title="Facebook"><a href="https://www.facebook.com/nakaojoao/" target="_blank"><i class="facebook"></i></a></abbr>
+                    <abbr title="Tik Tok"><a href="https://www.tiktok.com/@joao_nakao" target="_blank"><i class="tiktok"></i></a></abbr>
+                </div>
+        </section>
+        <section class="pag3">
+            <div class="foto2">
+                <blockquote>
+                    <p class="citacao">"Como é bom cantar. <br></p>
+                    <p class="citacao">Trocar toques, sons <br></p>
+                    <p class="citacao">que ecoam no <span class="sol">Sol</span>."
+                    </p>
+                </blockquote>
             </div>
-            <div class="video">
-                <iframe title="vimeo-player" src="https://player.vimeo.com/video/995163658?h=1a445a2571" width="600" height="320" frameborder="0"    allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="foto2">
-            <blockquote>
-                <p class="citacao">"Como é bom cantar. <br></p>
-                <p class="citacao">Trocar toques sons <br></p> 
-                <p class="citacao">que ecoam no <span class="sol">Sol</span>."
-                </p>
-            </blockquote>
-        </div>
-    </section>
-
-
+        </section>
+        <section class="section_sobre">
+            <h1 class="titulo_sobre">Sobre</h1>
+                <p class="texto_sobre">Nakao é um talentoso músico formado pela Universidade Estadual de Londrina. Em 2020, lançou seu primeiro álbum de estúdio, "Smothered", uma fusão de pop, folk, MPB e blues. Com canções em inglês, o álbum oferece um som introspectivo e intimista, refletindo suas vivências na juventude através de letras e melodias profundas.</p>
+                <p class="texto_sobre">Além de sua carreira solo, Nakao é intérprete no duo de voz e violão "Sincopaduo" com Gustavo Gorla. Juntos, eles exploram a canção brasileira com muita musicalidade e versatilidade. Nakao também é conhecido por suas apresentações temáticas, como "Nakao canta Djavan", "Viva Elis" e "Samba da Madrugada".</p>
+                <p class="texto_sobre">Com uma formação sólida e uma carreira diversificada, Nakao se destaca pela sua capacidade de transitar entre diferentes estilos musicais, criando conexões significativas com seu público. Seu trabalho é uma exploração contínua dos limites da música, oferecendo uma experiência única e envolvente.</p>
+        </section>
+        <section class="section_contato">
+            <div class="foto3">
+                <h1 class="titulo_contato">Contato</h1>
+                <div class="informacoes_contato">
+                    <address class="citacao">Email: joao_nakao@hotmail.com <br></address>
+                    <p class="citacao">Telefone: (43) 999591356 </p>
+                </div>
+            </div>    
+        </section>
+    </main>
+    <footer>© TODOS OS DIREITOS RESERVADOS</footer>
+    
     <script src="menu.js"></script>
 </body>
 </html>
