--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mediaqueries.css">
 
 
 </head>
@@ -48,8 +49,8 @@
         <section class="pag3">
             <div class="foto2">
                 <blockquote>
-                    <p class="citacao">"Como é bom cantar. <br></p>
-                    <p class="citacao">Trocar toques, sons <br></p>
+                    <p id="comoebom" class="citacao">"Como é bom cantar.</p>
+                    <p class="citacao">Trocar toques, sons</p>
                     <p class="citacao">que ecoam no <span class="sol">Sol</span>."
                     </p>
                 </blockquote>
@@ -57,16 +58,17 @@
         </section>
         <section class="section_sobre">
             <h1 class="titulo_sobre">Sobre</h1>
-                <p class="texto_sobre">Nakao é um talentoso músico formado pela Universidade Estadual de Londrina. Em 2020, lançou seu primeiro álbum de estúdio, "Smothered", uma fusão de pop, folk, MPB e blues. Com canções em inglês, o álbum oferece um som introspectivo e intimista, refletindo suas vivências na juventude através de letras e melodias profundas.</p>
-                <p class="texto_sobre">Além de sua carreira solo, Nakao é intérprete no duo de voz e violão "Sincopaduo" com Gustavo Gorla. Juntos, eles exploram a canção brasileira com muita musicalidade e versatilidade. Nakao também é conhecido por suas apresentações temáticas, como "Nakao canta Djavan", "Viva Elis" e "Samba da Madrugada".</p>
-                <p class="texto_sobre">Com uma formação sólida e uma carreira diversificada, Nakao se destaca pela sua capacidade de transitar entre diferentes estilos musicais, criando conexões significativas com seu público. Seu trabalho é uma exploração contínua dos limites da música, oferecendo uma experiência única e envolvente.</p>
+            <div class="container_texto_sobre">
+                <p class="texto_sobre">Nakao é um talentoso músico formado pela Universidade Estadual de Londrina. Em 2020, lançou seu primeiro álbum de estúdio, "Smothered", uma fusão de pop, folk, MPB e blues. Com canções em inglês, o álbum oferece um som introspectivo e intimista, refletindo suas vivências na juventude através de letras e melodias profundas.
+                    <p class="texto_sobre">Além de sua carreira solo, Nakao é intérprete no duo de voz e violão "Sincopaduo" com Gustavo Gorla. Juntos, eles exploram a canção brasileira com muita musicalidade e versatilidade. Nakao também é conhecido por suas apresentações temáticas, como "Nakao canta Djavan", "Viva Elis" e "Samba da Madrugada".</p><p class="texto_sobre">Com uma formação sólida e uma carreira diversificada, Nakao se destaca pela sua capacidade de transitar entre diferentes estilos musicais, criando conexões significativas com seu público. Seu trabalho é uma exploração contínua dos limites da música, oferecendo uma experiência única e envolvente.</p>
+            </div>
         </section>
         <section class="section_contato">
             <div class="foto3">
                 <h1 class="titulo_contato">Contato</h1>
                 <div class="informacoes_contato">
-                    <address class="citacao">Email: joao_nakao@hotmail.com <br></address>
-                    <p class="citacao">Telefone: (43) 999591356 </p>
+                    <address class="contato">Email: joao_nakao@hotmail.com <br></address>
+                    <p class="contato">Telefone: (43) 999591356 </p>
                 </div>
             </div>    
         </section>
