--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section class="pag3">
             <div class="foto2">
                 <blockquote>
-                    <p id="comoebom" class="citacao">"Como é bom cantar.</p>
+                    <p class="citacao">"Como é bom cantar.</p>
                     <p class="citacao">Trocar toques, sons</p>
                     <p class="citacao">que ecoam no <span class="sol">Sol</span>."
                     </p>
