--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nakao</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaqueries.css">
 
@@ -13,20 +13,20 @@
     <header id="header">
         <nav>
             <div class="esquerda">
-                <p id="nome">Nakao</p>
+                <a href="#inicio" id="nome">Nakao</p>
             </div>
                 <div class="direita">
-                <a href="" id="musica">música</a>
-                <a href="sobre.html" id="sobre">sobre</a>
-                <a href="" id="contato">contato</a>
+                <a href="#section1" id="musica">música</a>
+                <a href="#section2" id="sobre">sobre</a>
+                <a href="#section3" id="contato">contato</a>
                 </div>
         </nav>
     </header>
     <main>
-        <section class="section_inicio">
+        <section id="inicio" class="section_inicio">
             <div class="foto1"></div>
         </section>
-        <section class="section_oucaem">
+        <section id="section1" class="section_oucaem">
                 <h1>Ouça em:</h1>
                 <div class="oucaem">
                     <abbr title="Spotify"><a href="https://open.spotify.com/intl-pt/artist/4TDT2YloHIkNFb9zbFgCTL?si=XBIpN_FORt2lv81pGY5MDw" target="_blank"><i class="spotify"></i></a></abbr>
@@ -56,14 +56,14 @@
                 </blockquote>
             </div>
         </section>
-        <section class="section_sobre">
+        <section class="section_sobre" id="section2">
             <h1 class="titulo_sobre">Sobre</h1>
             <div class="container_texto_sobre">
                 <p class="texto_sobre">Nakao é um talentoso músico formado pela Universidade Estadual de Londrina. Em 2020, lançou seu primeiro álbum de estúdio, "Smothered", uma fusão de pop, folk, MPB e blues. Com canções em inglês, o álbum oferece um som introspectivo e intimista, refletindo suas vivências na juventude através de letras e melodias profundas.
                     <p class="texto_sobre">Além de sua carreira solo, Nakao é intérprete no duo de voz e violão "Sincopaduo" com Gustavo Gorla. Juntos, eles exploram a canção brasileira com muita musicalidade e versatilidade. Nakao também é conhecido por suas apresentações temáticas, como "Nakao canta Djavan", "Viva Elis" e "Samba da Madrugada".</p><p class="texto_sobre">Com uma formação sólida e uma carreira diversificada, Nakao se destaca pela sua capacidade de transitar entre diferentes estilos musicais, criando conexões significativas com seu público. Seu trabalho é uma exploração contínua dos limites da música, oferecendo uma experiência única e envolvente.</p>
             </div>
         </section>
-        <section class="section_contato">
+        <section class="section_contato" id="section3">
             <div class="foto3">
                 <h1 class="titulo_contato">Contato</h1>
                 <div class="informacoes_contato">
