--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Nakao</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/mediaqueries.css">
+    <link rel="shortcut icon" href="imagens/favicon.png"
+    type="image/x-icon">
 
 
 </head>
